@@ -1,3 +1,11 @@
+2001-12-14  Werner Koch  <wk@gnupg.org>
+
+	* assuan-listen.c (assuan_close_input_fd): New.
+	(assuan_close_output_fd): New.
+	* assuan-handler.c (std_handler_reset): Always close them after a
+	reset command.
+	(std_handler_bye): Likewise.
+
 2001-12-14  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan-buffer.c (_assuan_read_line): New variable ATTICLEN, use
